--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body>
     <div id="header">
-        <img id="logo" src="https://raw.githubusercontent.com/GiggioG/blog/master/private/logo.jpg" alt="logo">
+        <img id="logo" src="/img/logo.png" alt="logo">
         <h1 class="primary-title">Welcome to Gigo_G's blog</h1>
     </div>
     <div id="LatestUpdates">
@@ -60,9 +60,9 @@
     <div id="aboutMe">
         <h2 class="secondary-title">About Me</h2>
         <p class="content-paragraph">
-            I'm a 10 year old bulgarian boy,interested in programming <br>
-            NodeJS.I prefer JSON instead of XML.And now,I'm making <br>
-            a site with Github Pages.I have a Scratch account and from<br>
+            I'm a young bulgarian boy,interested in programming <br>
+            NodeJS. I prefer JSON instead of XML. And now, I'm making <br>
+            a site with Github Pages. I have a Scratch account and from<br>
             soon a Github account.<br>
             <a  target="_blank" href="https://scratch.mit.edu/users/Gigo_G">Scratch - Gigo_G(Me)</a><br>
             <a  target="_blank" href="https://github.com/GiggioG">Github - GiggioG(Me)</a><br>
