a shit tone of progress

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +15,121 @@
     <!--content-paragraph-->
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1 class="primary-text">Site</h1>
-    <h2 class="secondary-text">of Gigo_G</h2>
-    <h3 class="tertiary-text">just the tertiary text</h3>
-    <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-        deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-        pariatur eos hic placeat dicta animi soluta.
-    </p>
+    <nav>
+        <ul>
+            <li>
+                <a href="./old">
+                    <i class="far fa-clock fa-2x"></i>
+                    <span>Old page</span>
+                </a>
+            </li>
+            <li>
+                <a href="./meme">
+                    <i class="far fa-laugh fa-2x"></i>
+                    <span>Meme page</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <h1 class="primary-text">Site</h1>
+        <h2 class="secondary-text">of Gigo_G</h2>
+        <h3 class="tertiary-text">just the tertiary text</h3>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+    </main>
 </body>
+
 </html>
