--- a/old/index.html
+++ b/old/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gigo_G's blog</title>
-    <link href="https://raw.githubusercontent.com/GiggioG/blog/master/private/favicon.ico" rel="shortcut icon">
+    <link href="../img/favicon.ico" rel="shortcut icon">
     <!--primary-title-->
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <!--secondary-title-->
@@ -48,7 +48,7 @@
 
 <body>
     <div id="header">
-        <img id="logo" src="/img/logo.png" alt="logo">
+        <img id="logo" src="../img/old/logo.jpg" alt="logo">
         <h1 class="primary-title">Welcome to Gigo_G's blog</h1>
     </div>
     <div id="LatestUpdates">
@@ -82,7 +82,7 @@
         <h4 class="tertiary-title">Taekwon-do</h4>
         <p class="content-paragraph">
             I also learn Taekwon-do.I am eighth kup.(yellow belt)
-            <img src="https://raw.githubusercontent.com/GiggioG/blog/master/private/yellow_belt.jpg" alt="yellow tekwondo belt"
+            <img src="../img/old/yellow_belt.jpg"
                 id="yellow-belt"><br>
             It's realy cool.
         </p>
