successfuly added navbar

--- a/meme/index.html
+++ b/meme/index.html
@@ -1,12 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <base href="..">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <title>test</title>
+    <title>Gigo_G's site</title>
+    <link href="./img/logo.png" rel="shortcut icon">
+    <!--primary-title-->
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <!--secondary-title-->
+    <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
+    <!--tertiary-title-->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <!--content-paragraph-->
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    test
+    <nav>
+        <ul>
+            <li id="logo">
+                <a href="./">
+                    <img src="./img/logo.png">
+                    <span class="primary-text">Gigo_G</span>
+                </a>
+            </li>
+            <li>
+                <a href="./old">
+                    <i class="far fa-clock fa-2x"></i>
+                    <span>Old page</span>
+                </a>
+            </li>
+            <li>
+                <a href="./meme">
+                    <i class="far fa-laugh fa-2x"></i>
+                    <span>Meme page</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <h1 class="primary-text">Site</h1>
+        <h2 class="secondary-text">of Gigo_G</h2>
+        <h3 class="tertiary-text">just the tertiary text</h3>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
+            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
+            pariatur eos hic placeat dicta animi soluta.
+        </p>
+    </main>
 </body>
+
 </html>
