--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigo_G's site</title>
-    <link href="./img/favicon.ico" rel="shortcut icon">
+    <link href="./img/logo.png" rel="shortcut icon">
     <!--primary-title-->
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <!--secondary-title-->
@@ -21,6 +21,12 @@
 <body>
     <nav>
         <ul>
+            <li id="logo">
+                <a href="./">
+                    <img src="./img/logo.png">
+                    <span class="primary-text">Gigo_G</span>
+                </a>
+            </li>
             <li>
                 <a href="./old">
                     <i class="far fa-clock fa-2x"></i>
