--- a/old/index.html
+++ b/old/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gigo_G's blog</title>
-    <link href="../img/favicon.ico" rel="shortcut icon">
+    <link href="../img/favicon.png" rel="shortcut icon">
     <!--primary-title-->
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <!--secondary-title-->
