--- a/index.html
+++ b/index.html
@@ -19,28 +19,7 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li id="logo">
-                <a href="./">
-                    <img src="./img/logo.png">
-                    <span class="primary-text">Gigo_G</span>
-                </a>
-            </li>
-            <li>
-                <a href="./old">
-                    <i class="far fa-clock fa-2x"></i>
-                    <span>Old page</span>
-                </a>
-            </li>
-            <li>
-                <a href="./meme">
-                    <i class="far fa-laugh fa-2x"></i>
-                    <span>Meme page</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <link rel="import" href="./includes/nav.html">
     <main>
         <h1 class="primary-text">Site</h1>
         <h2 class="secondary-text">of Gigo_G</h2>
