seperate nav in file and make an include script

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
+    <script src="./js/includes.js" id="includes.js" data-includes="navbar,./includes/nav.html"></script>
 </head>
 
 <body>
-    <link rel="import" href="./includes/nav.html">
+    <i id="navbar"></i>
     <main>
         <h1 class="primary-text">Site</h1>
         <h2 class="secondary-text">of Gigo_G</h2>
