--- a/meme/index.html
+++ b/meme/index.html
@@ -17,125 +17,12 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
+    <script src="./js/includes.js" id="includes.js" data-includes="navbar,./includes/nav.html"></script>
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li id="logo">
-                <a href="./">
-                    <img src="./img/logo.png">
-                    <span class="primary-text">Gigo_G</span>
-                </a>
-            </li>
-            <li>
-                <a href="./old">
-                    <i class="far fa-clock fa-2x"></i>
-                    <span>Old page</span>
-                </a>
-            </li>
-            <li>
-                <a href="./meme">
-                    <i class="far fa-laugh fa-2x"></i>
-                    <span>Meme page</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
     <main>
-        <h1 class="primary-text">Site</h1>
-        <h2 class="secondary-text">of Gigo_G</h2>
-        <h3 class="tertiary-text">just the tertiary text</h3>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
+        <h1 class="primary-text">meme meme meme meme meme meme meme meme meme meme</h1>
     </main>
 </body>
 
