fix navbar include in meme

--- a/meme/index.html
+++ b/meme/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <i id="navbar"></i>
     <main>
         <h1 class="primary-text">meme meme meme meme meme meme meme meme meme meme</h1>
     </main>
