--- a/meme/index.html
+++ b/meme/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./js/includes.js" id="includes.js" data-includes="navbar,./includes/nav.html"></script>
+    <script src="./js/includes.js" data-includes="navbar,./includes/nav.html"></script>
 </head>
 
 <body>
