--- a/meme/index.html
+++ b/meme/index.html
@@ -7,17 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigo_G's site</title>
     <link href="./img/logo.png" rel="shortcut icon">
-    <!--primary-title-->
-    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    <!--secondary-title-->
-    <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
-    <!--tertiary-title-->
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <!--content-paragraph-->
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <i id="fonts"></i>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./js/includes.js" data-includes="navbar,./includes/nav.html"></script>
+    <script src="./js/includes.js" data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html"></script>
 </head>
 
 <body>
