make include use classes

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigo_G's site</title>
     <link href="./img/logo.png" rel="shortcut icon">
-    <i id="fonts"></i>
+    <i class="fonts"></i>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
     <script src="./js/includes.js" data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html"></script>
 </head>
 
 <body>
-    <i id="navbar"></i>
+    <i class="incl-navbar"></i>
     <main>
         <h1 class="primary-text">Site</h1>
         <h2 class="secondary-text">of Gigo_G</h2>
