--- a/meme/index.html
+++ b/meme/index.html
@@ -5,18 +5,22 @@
     <base href="..">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gigo_G's site</title>
+    <title>Some of my favourite memes</title>
     <link href="./img/logo.png" rel="shortcut icon">
-    <i id="fonts"></i>
+    <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./js/includes.js" data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html"></script>
+    <script src="./js/includes.js" data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html|byme,./includes/meme_by_me.html"></script>
 </head>
 
 <body>
-    <i id="navbar"></i>
+    <i class="incl-navbar"></i>
     <main>
-        <h1 class="primary-text">meme meme meme meme meme meme meme meme meme meme</h1>
+        <h1 class="primary-text">Meme page</h1>
+        <h2 class="secondary-text">
+            This page contains some of my favourite memes.<br>
+            The ones made by me will contain a <i class="incl-byme"></i>
+        </h2>
     </main>
 </body>
 
