--- a/meme/index.html
+++ b/meme/index.html
@@ -19,7 +19,10 @@
         <h1 class="primary-text">Meme page</h1>
         <h2 class="secondary-text">
             This page contains some of my favourite memes.<br>
-            The ones made by me will contain a <i class="incl-byme"></i>
+            The ones made by me will contain a 
+            <i class="incl-byme"></i>
+            <i class="incl-byme"></i>
+            <i class="incl-byme"></i>
         </h2>
     </main>
 </body>
