fix meme page(memes were too big)

--- a/meme/index.html
+++ b/meme/index.html
@@ -21,7 +21,7 @@
             This page contains some of my favourite memes.<br>
             The ones made by me will contain a <i class="incl-byme"></i> icon.
         </h2>
-        <ul>
+        <ul class="memes-ul">
             <li>
                 <h3 class="tertiary-text">1.<i class="incl-byme"></i></h3><br>
                 <img src="./img/memes/1.png">
