--- a/index.html
+++ b/index.html
@@ -15,98 +15,12 @@
 <body>
     <i class="incl-navbar"></i>
     <main>
-        <h1 class="primary-text">Site</h1>
+        <h1 class="primary-text">Website/blog/something</h1>
         <h2 class="secondary-text">of Gigo_G</h2>
-        <h3 class="tertiary-text">just the tertiary text</h3>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
-        </p>
-        <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Accusamus asperiores sapiente odit, earum nisi
-            deleniti nihil ducimus minus obcaecati eum nulla aperiam molestias
-            pariatur eos hic placeat dicta animi soluta.
+        <h3 class="tertiary-text">what and why</h3>
+        <p class="content-paragraph">
+            Hi, I am Gigo_G. I'm a young bulgarian primary-javascript programmer<br>
+            with a big interese for minecraft
         </p>
     </main>
 </body>
