--- a/index.html
+++ b/index.html
@@ -17,10 +17,39 @@
     <main>
         <h1 class="primary-text">Website/blog/something</h1>
         <h2 class="secondary-text">of Gigo_G</h2>
-        <h3 class="tertiary-text">what and why</h3>
+        <h3 class="tertiary-text">Who is Gigo_G?</h3>
         <p class="content-paragraph">
             Hi, I am Gigo_G. I'm a young bulgarian primary-javascript programmer<br>
-            with a big interese for minecraft
+            with a big interest for minecraft. I am using Github Pages for my site<br>
+            because...you know... its <span class="tertiary-text">free</span>.
+        </p>
+        <h3 class="tertiary-text">What and why is this website?</h3>
+        <p class="content-paragraph">
+            So, before I had a blog that you can see <a href="./old">here</a> or with the clock icon in<br>
+            the navigation bar. It was kinda bad so I took it down and I made a new one<br>
+            You can see all the pages on this site in the navigation bar on the left/bottom of the site.
+        </p>
+        <h3 class="tertiary-text">Blah blah blah</h3>
+        <p class="content-paragraph">
+            I am out of content for this page, because this site is a dimping ground<br>
+            for my projects or things. If you have and Ideas or wanna share something<br>
+            with me you can contact me <a href="./contact">here</a> or with the man icon in the navigation bar.<br>
+            I want to fill the whole page so there will be some lorem ipsum.
+        </p>
+        <h3 class="tertiary-text">Lorem Ipsum</h3>
+        <p class="content-paragraph">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos officiis<br>
+            voluptatem, hic voluptas qui amet cum suscipit dicta cupiditate magnam<br>
+            provident voluptates odio expedita tenetur incidunt. Repellendus<br>
+            assumenda corrupti consectetur!<br>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos officiis<br>
+            voluptatem, hic voluptas qui amet cum suscipit dicta cupiditate magnam<br>
+            provident voluptates odio expedita tenetur incidunt. Repellendus<br>
+            assumenda corrupti consectetur!<br>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos officiis<br>
+            voluptatem, hic voluptas qui amet cum suscipit dicta cupiditate magnam<br>
+            provident voluptates odio expedita tenetur incidunt. Repellendus<br>
+            assumenda corrupti consectetur!<br>
         </p>
     </main>
 </body>
