--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href=".." target="_blank">
+    <base href="..">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
@@ -19,18 +19,18 @@
     <main>
         <h1 class="primary-text">Contact me</h1>
         <ul class="contacts-ul">
-            <li style="background-color: orangered;"><a href="https://www.reddit.com/user/Gigo_G">Reddit: Gigo_G</a></li>
-            <li style="background-color: royalblue;"><a href="https://twitter.com/gigog27">Twitter: gigog27</a></li>
-            <li style="background-color: purple;"><a href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></li>
-            <li style="background-color: darkcyan;"><a href="https://discord.com/users/549181294882324501">Discord: Gigo_G#9857</a></li>
-            <li style="background-color: black;"><a href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></li>
-            <li style="background-color: orange;"><a href="https://scratch.mit.edu/users/Gigo_G/">Scratch: Gigo_G</a></li>
-            <li style="background-color: darkslategrey;"><a href="https://github.com/GiggioG/">Github: GiggioG</a></li>
-            <li style="background-color: darkred;"><a onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></li>
-            <li style="background-color: red;"><a href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></li>
-            <li style="background-color: forestgreen;"><a href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox Live: GiggioG</a></li>
-            <li style="background-color: turquoise;"><a href="https://gigog.imgur.com/">Imgur: GiggioG</a></li>
-            <li style="background-color: darkgoldenrod;"><a href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></li>
+            <li style="background-color: orangered;"><a target="_blank" href="https://www.reddit.com/user/Gigo_G">Reddit: Gigo_G</a></li>
+            <li style="background-color: royalblue;"><a target="_blank" href="https://twitter.com/gigog27">Twitter: gigog27</a></li>
+            <li style="background-color: purple;"><a target="_blank" href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></li>
+            <li style="background-color: darkcyan;"><a target="_blank" href="https://discord.com/users/549181294882324501">Discord: Gigo_G#9857</a></li>
+            <li style="background-color: black;"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></li>
+            <li style="background-color: orange;"><a target="_blank" href="https://scratch.mit.edu/users/Gigo_G/">Scratch: Gigo_G</a></li>
+            <li style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></li>
+            <li style="background-color: darkred;"><a target="_blank" onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></li>
+            <li style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></li>
+            <li style="background-color: forestgreen;"><a target="_blank" href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox Live: GiggioG</a></li>
+            <li style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GiggioG</a></li>
+            <li style="background-color: darkgoldenrod;"><a target="_blank" href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></li>
         </ul>
     </main>
 </body>
