--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigo_G's site</title>
     <link href="./img/logo.png" rel="shortcut icon">
-    <i class="fonts"></i>
+    <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
     <script src="./js/includes.js" data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html"></script>
