add sound to bell

--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
     <script src="./js/includes.js"
-        data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html|byme,./includes/meme_by_me.html"></script>
+        data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html"></script>
 </head>
 
 <body>
