fix "sound" to "audio"

--- a/bell/index.html
+++ b/bell/index.html
@@ -21,7 +21,7 @@
         <h2 class="secondary-text" id="time"></h2>
     </main>
     <script>
-        let bell = new Audio("./media/sound/bell.mp3");
+        let bell = new Audio("./media/audio/bell.mp3");
         class Event{
             constructor(beg,end,name){
                 this.beg=beg;
